salesforce-main/src/main/default/objects/Document__c/Document__c.object-meta.xml
<CustomObject>
    <label>Document</label>
    <nameField>
        <displayFormat>DOC-{0000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>