salesforce-main/src/main/default/objects/Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>