salesforce-main/src/main/default/objects/Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>O-level</fullName>
            </value>
            <value>
                <fullName>A-level</fullName>
            </value>
            <value>
                <fullName>HND</fullName>
            </value>
            <value>
                <fullName>GCSE</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>LLB</fullName>
            </value>
            <value>
                <fullName>English Language Test</fullName>
            </value>
            <value>
                <fullName>Inns of Court</fullName>
            </value>
            <value>
                <fullName>SRA Confirmation</fullName>
            </value>
            <value>
                <fullName>Certificate of Academic Standing</fullName>
            </value>
            <value>
                <fullName>ACCA Registration</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Letter of Prior CAS/Visa</fullName>
            </value>
            <value>
                <fullName>UK Visa History</fullName>
            </value>
            <value>
                <fullName>Documented History of UK Stay</fullName>
            </value>
            <value>
                <fullName>Bank Statement</fullName>
            </value>
            <value>
                <fullName>Acceptance Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>