salesforce-main/src/main/default/objects/Document__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <label>Verified</label>
    <type>Date</type>
</CustomField>